examples/fail/fail_exception_serialize/project.bri
import * as std from "std";

export const project = {
  dependencies: {
    std: "*",
  },
};

interface TestType {
  foo: string;
  bar: string;
}

export default () => {
  return {
    briocheSerialize: () => {
      throw new Error("briocheSerialize exception");
    }
  }
}
